# whitespace-python

./: CHANGELOG.rst  CODEOWNERS  LICENSE  README.rst  pyproject.toml
whitespace/: peripherals.py
